http://rb.dcache.org/r/417/ - robust connection handling, use log4j in space manager, remove use of Statatement in favor of PreparedStatement